src/app/test/test-table/test-table.component.css
td {
  border: 0;
  vertical-align: middle;
  font-size: 11px;
  max-width: 40rem;
  word-wrap: break-word;
}

tr {
  line-height: 20px;
  height: 100%;
  border-bottom: 1px solid var(--border-color);
  vertical-align: middle;
}

.buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.25rem;
  width: fit-content;
}

.button-width {
  width: 2.2rem;
  height: 2rem;
}

button {
  height: fit-content;
}

.table-container {
  overflow: auto;
  height: 80vh;
}

.test-table td {
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.test-table th:not(.table-row-checkbox) {
  padding-bottom: 0.25rem;
  padding-top: 0.25rem;
  width: 15%;
  text-align: left;
}

.table-row-checkbox {
  text-align: center;
  vertical-align: middle;
  width: 1rem;
}

.test-table {
  width: 100%;
  table-layout: fixed;
}

